fix tooltips rendering behind datatable dropdowns

--- a/app/assets/stylesheets/hera/modules/_datatables.scss
+++ b/app/assets/stylesheets/hera/modules/_datatables.scss
@@ -1,5 +1,7 @@
 div.dataTables_wrapper {
   .dt-button-collection {
+    z-index: 1001;
+
     .dropdown-item,
     .dropdown-item.active {
       background-color: $white;
